--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an Industrial Engineer, married with one 19 year old daughter</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Lima, Peru</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Coding, gaming, skiing, aeromodelism</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Freelance developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Castle Rock, CO</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It has always been my dream job</p>
     </section>
 
     <footer id="footer">
